fix chat-ai route, add ForgotPassword,ResetPassword
