# app/Http/Controllers/Api/V1/ForgotPasswordController.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Controllers\Api\V1;
+
+use App\Http\Controllers\Controller;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Password;
+use Illuminate\Support\Facades\Validator;
+
+class ForgotPasswordController extends Controller
+{
+    public function forgot(Request $request)
+    {
+        $validator = Validator::make($request->all(), [
+            'email' => 'required|email|exists:users,email',
+        ]);
+
+        if ($validator->fails()) {
+            return response()->json(['errors' => $validator->errors()], 422);
+        }
+
+        $response = Password::broker()->sendResetLink(
+            $request->only('email')
+        );
+
+        if ($response == Password::RESET_LINK_SENT) {
+            return response()->json(['message' => 'Foi enviado e-mail com instruções para reset da senha.'], 200);
+        } else {
+            return response()->json(['message' => 'Houve um erro. Tente novamente'], 500);
+        }
+    }
+}
